tests/ui/lazy-type-alias/unconstrained-params-in-impl-due-to-overflow.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-params-in-impl-due-to-overflow.rs:4:6
   |
LL | impl<T> Loop<T> {}
   |      ^ unconstrained type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
